@@ -1,3 +1,7 @@
+plugins {
+    checkstyle
+}
+
 buildscript {
     repositories {
         google()
@@ -11,7 +15,45 @@ buildscript {
     }
 
     dependencies {
-        classpath("com.android.tools.build:gradle:7.3.1")
-        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.0")
+        classpath("com.android.tools.build:gradle:8.2.1")
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.22")
     }
+}
+
+allprojects {
+    val kotlinLint by configurations.creating
+
+    dependencies {
+        kotlinLint("com.pinterest:ktlint:1.1.1") {
+            attributes {
+                attribute(Bundling.BUNDLING_ATTRIBUTE, objects.named(Bundling.EXTERNAL))
+            }
+        }
+    }
+
+    repositories {
+        google()
+        mavenCentral()
+    }
+
+    tasks.register<JavaExec>("ktlint") {
+        description = "Check Kotlin code style."
+        mainClass.set("com.pinterest.ktlint.Main")
+        classpath = kotlinLint
+        args("src/**/*.kt")
+        jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
+    }
+
+    tasks.register<JavaExec>("ktlintFormat") {
+        group = "formatting"
+        description = "Fix Kotlin code style deviations."
+        mainClass.set("com.pinterest.ktlint.Main")
+        classpath = kotlinLint
+        args("-F", "src/**/*.kt")
+        jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
+    }
+}
+
+tasks.create<Delete>("clean") {
+    delete(rootProject.buildDir)
 }
